bOcracy - v1.0.20 - Added unlocked var for each b in localStorage, added pack purchase but in comments, removed extra lines in between B stats, added popup bClick - v3.4.3 final update - Changed style of .button (no transition, grey instead of yellow hover color, no hover shadow, no border-radius on hover, etc), removed social setting group, removed chrome reminder,  added Arjun Madana credit to nature B, added beta test b-Ocracy to coming soon, removed flicker of Cameron Samuels, changed Cameron Samuels link to facebook, removed The B Team link, removed tutorial link, fixed stats bug with value as string, removed auto minimize of some setting groups, changed old captions to comments

--- a/bocracy/battle.css
+++ b/bocracy/battle.css
@@ -85,6 +85,17 @@
 			}
 			#aName, #bName { font-size: 25px; margin: 5px 0;}
 
+			#popup {
+				display: none;
+				position: absolute;
+
+				top: calc(50% - 100px);
+				left: calc(50% - 100px);
+
+				width: 200px;
+				height: 200px;
+			}
+
 			#overlay {
 				display: none;
 				background: #FFFFFF;
