--- a/v/3/4/3/bclick.css
+++ b/v/3/4/3/bclick.css
@@ -82,17 +82,17 @@ a:hover { color: #8888ff; }
     text-decoration: none;
     text-align: center;
     width: calc(90% - 30px - 2px);
-    transition: all 0.5s ease;
+    /*transition: all 0.5s ease;*/
     margin: 2.5px 9px !important;
     user-select: none;
     cursor: pointer;
 }
 
 .button:hover {
-  background-color: yellow;
-  color: #2a2a2a;
+  background-color: rgb(120, 120, 120);
+/*  color: #2a2a2a;
   box-shadow: 5px 5px 15px #2a2a2a;
-  border-radius: 20px;
+  border-radius: 20px;*/
 }
 
 .section {
